# Inventor_Scripts

./: .gitignore  CLAUDE.md  README.md  ZabraCadabra.spec  build.py  inventor_drawing_tool.md  pyproject.toml  usage_guide.txt
.claude/: settings.json
.claude/hooks/: lint-python.sh
docs/plans/: strategy-brief.md  vendor-api-spike-plan.md
inventor_api/: __init__.py  application.py  exceptions.py  exporters.py  importer.py  pyproject.toml  types.py
inventor_api/src/inventor_api/: __init__.py  _com_threading.py  application.py  document.py  drawing.py  exceptions.py  simplifier.py  traversal.py  types.py
inventor_api/tests/: test_document.py  test_drawing.py  test_exporters.py  test_importer.py  test_traversal.py
inventor_drawing_tool/: pyproject.toml
inventor_drawing_tool/src/inventor_drawing_tool/: __init__.py  __main__.py  cli.py  config.py  creation_log.py  gui.py  models.py  orchestrator.py  release_log.py  scanner.py  settings_dialog.py
inventor_drawing_tool/tests/: test_config.py  test_models.py  test_scanner.py
inventor_export_tool/: __main__.py  app.py  config.py  gui.py  models.py  naming.py  orchestrator.py  pyproject.toml  settings_dialog.py
inventor_export_tool/src/inventor_export_tool/: __main__.py  app.py  cli.py  config.py  export_log.py  gui.py  naming.py  orchestrator.py  settings_dialog.py
inventor_export_tool/tests/: test_config.py  test_export_log.py  test_naming.py  test_settings_dialog.py
inventor_simplify_tool/: __main__.py  gui.py  orchestrator.py  pyproject.toml  simplify_log.py
inventor_simplify_tool/src/inventor_simplify_tool/: __main__.py  cli.py  config.py  gui.py  models.py  orchestrator.py  simplify_log.py
inventor_simplify_tool/tests/: test_simplify_config.py  test_simplify_log.py
inventor_utils/: pyproject.toml
inventor_utils/src/inventor_utils/: __init__.py  base_logger.py  base_orchestrator.py  config.py  error_hints.py  filenames.py
inventor_utils/tests/: test_config.py  test_filenames.py
tests/: conftest.py  test_export_log.py  test_models.py  test_simplify_log.py  test_simplify_models.py
tests/inventor_api/: test_document.py  test_exporters.py  test_simplifier.py  test_traversal.py  test_types.py
tests/telemetry/: test_feedback.py  test_logger.py  test_session.py  test_transport.py
vendor_api_tool/: pyproject.toml
vendor_api_tool/src/vendor_api_tool/: __main__.py  cli.py  config.py  datasheet.py  digikey.py  gui.py  models.py  nexar.py
vendor_api_tool/tests/: test_config.py  test_datasheet.py  test_digikey.py  test_models.py  test_nexar.py
zabra_cadabra/: ZabraCadabra.spec  __main__.py  app.py  build.py  pyproject.toml  shell.py  tab_registry.py  theme.py
zabra_cadabra/assets/: usage_guide.txt
zabra_cadabra/src/zabra_cadabra/: app.py  shell.py  tab_registry.py
zabra_cadabra/src/zabra_cadabra/telemetry/: config.py  error_hook.py  feedback.py  logger.py  session.py
zabra_cadabra/telemetry/: __init__.py  logger.py  transport.py
zabra_cadabra/tests/telemetry/: __init__.py  test_config.py
