[project]
name = "zabra-cadabra"
version = "0.1.0"
description = "Zabra-Cadabra — multi-tool automation suite for Autodesk Inventor"
requires-python = ">=3.10"
dependencies = [
    "pywin32>=306",
]

[project.gui-scripts]
zabra-cadabra = "zabra_cadabra.app:main"
inventor-export-tool = "inventor_export_tool.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
