[project]
name = "inventor-scripts"
version = "0.1.0"
description = "Workspace root for Inventor automation tools"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "inventor_api",
    "inventor_utils",
    "inventor_export_tool",
    "inventor_simplify_tool",
    "inventor_drawing_tool",
    "vendor_api_tool",
    "zabra_cadabra",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 99
