[project]
name = "inventor-drawing-tool"
version = "0.1.0"
description = "Batch drawing creation and revision release tool for Inventor"
requires-python = ">=3.10"
dependencies = ["inventor-api", "inventor-utils"]

[project.scripts]
inventor-drawing = "inventor_drawing_tool.cli:main"

[tool.uv.sources]
inventor-api = { workspace = true }
inventor-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
