[project]
name = "inventor-export-tool"
version = "0.1.0"
description = "Batch export tool for Inventor (STEP/DWG/PDF)"
requires-python = ">=3.10"
dependencies = ["inventor-api"]

[project.scripts]
inventor-export = "inventor_export_tool.cli:main"

[tool.uv.sources]
inventor-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
