[project]
name = "vendor-api-tool"
version = "0.1.0"
description = "Vendor API component lookup tool (prototype)"
requires-python = ">=3.10"
dependencies = ["inventor-utils", "httpx>=0.27", "pymupdf>=1.24"]

[project.scripts]
vendor-api = "vendor_api_tool.cli:main"

[tool.uv.sources]
inventor-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
